[package]
name = "rustjob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
polars = { version = "0.24.3", features = ["json"] }
json ="*"
serde = "*"
serde_derive = "*"
serde_json = "*"
ta = "0.4.0"